fix progress hover not showing reset button

--- a/src/index.css
+++ b/src/index.css
@@ -70,7 +70,7 @@ dialog article {
     }
   }
 
-  progress:hover + .reset {
+  progress:hover + .reset-button {
     opacity: 1;
   }
 
